# deco

./: .env  .gitignore  Cargo.toml
src/: cli.rs  main.rs  state.rs
